--- a/ports/index.html
+++ b/ports/index.html
@@ -70,22 +70,21 @@
    <tr class="even"><td><a href="https://github.com/mauke/unibilium/">unibilium</a></td><td><a href="./unibilium/">1.2.0-1</a></td><td>A terminfo parsing library.</td><td>2016-04-18</td></tr>
    <tr class="odd"><td><a href="http://urwid.org/">urwid3</a></td><td><a href="./urwid3/">1.3.1-1</a></td><td>A console user interface library for python.</td><td>2016-04-13</td></tr>
    <tr class="even"><td><a href="https://github.com/muennich/urxvt-perls">urxvt-perls</a></td><td><a href="./urxvt-perls/">git-1</a></td><td>Perl extensions for the urxvt-unicode terminal emulator. (git checkout)</td><td>2016-04-13</td></tr>
-   <tr class="odd"><td><a href="https://github.com/rkitover/vimpager">vimpager</a></td><td><a href="./vimpager/">git-1</a></td><td>Use vim as a pager. (git checkout)</td><td>2016-04-18</td></tr>
-   <tr class="even"><td><a href="http://www.victornils.net/tetris/">vitetris</a></td><td><a href="./vitetris/">0.57-1</a></td><td>Terminal-based tetris clone.</td><td>2016-04-19</td></tr>
-   <tr class="odd"><td><a href="https://www.unix-ag.uni-kl.de/~massar/vpnc/">vpnc</a></td><td><a href="./vpnc/">0.5.3-1</a></td><td>Client for cisco vpn concentrator.</td><td>2016-04-13</td></tr>
-   <tr class="even"><td><a href="https://github.com/shinh/w3m">w3m</a></td><td><a href="./w3m/">git-1</a></td><td>Text-based web browser. (git checkout)</td><td>2016-04-19</td></tr>
-   <tr class="odd"><td><a href="http://git.z3bra.org/wendy/log.html">wendy</a></td><td><a href="./wendy/">git-1</a></td><td>Event watcher. (git checkout)</td><td>2016-04-13</td></tr>
-   <tr class="even"><td><a href="https://wiki.winehq.org/Winetricks">winetricks</a></td><td><a href="./winetricks/">git-1</a></td><td>Helper script to install windows dependacies for wine. (git checkout)</td><td>2016-04-13</td></tr>
-   <tr class="odd"><td><a href="https://github.com/wmutils/core">wmutils</a></td><td><a href="./wmutils/">git-1</a></td><td>Wmutils core is a set of tools for X windows manipulation. (git checkout)</td><td>2016-04-13</td></tr>
-   <tr class="even"><td><a href="https://github.com/wildefyr/opt">wmutils-opt</a></td><td><a href="./wmutils-opt/">git-1</a></td><td>Optional extensions to wmutils. (git checkout)</td><td>2016-04-13</td></tr>
-   <tr class="odd"><td><a href="https://github.com/alols/xcape">xcape</a></td><td><a href="./xcape/">git-1</a></td><td>Modify a key's function on press and hold. (git checkout)</td><td>2016-04-19</td></tr>
-   <tr class="even"><td><a href="https://github.com/jordansissel/xdotool">xdotool</a></td><td><a href="./xdotool/">git-1</a></td><td>Fake keyboard/mouse input. (git checkout)</td><td>2016-04-15</td></tr>
-   <tr class="odd"><td><a href="https://github.com/xero/figlet-fonts">xero-figlet-fonts</a></td><td><a href="./xero-figlet-fonts/">git-1</a></td><td>Xero's figlet collection. (git checkout)</td><td>2016-04-13</td></tr>
-   <tr class="even"><td><a href="http://git.2f30.org/xscreenshot/log.html">xscreenshot</a></td><td><a href="./xscreenshot/">git-1</a></td><td>Screen capture tool. (git checkout)</td><td>2016-04-13</td></tr>
-   <tr class="odd"><td><a href="https://github.com/neeasade/xst">xst</a></td><td><a href="./xst/">git-1</a></td><td>Simple terminal fork.</td><td>2016-04-25</td></tr>
-   <tr class="even"><td><a href="https://github.com/Wildefyr/xxd">xxd</a></td><td><a href="./xxd/">git-1</a></td><td>Hexdump program written by Bram. (git checkout)</td><td>2016-04-13</td></tr>
-   <tr class="odd"><td><a href="https://github.com/tokland/youtube-upload">youtube-upload</a></td><td><a href="./youtube-upload/">git-1</a></td><td>Upload to youtube from the commandline. (git checkout)</td><td>2016-04-13</td></tr>
+   <tr class="odd"><td><a href="http://www.victornils.net/tetris/">vitetris</a></td><td><a href="./vitetris/">0.57-1</a></td><td>Terminal-based tetris clone.</td><td>2016-04-19</td></tr>
+   <tr class="even"><td><a href="https://www.unix-ag.uni-kl.de/~massar/vpnc/">vpnc</a></td><td><a href="./vpnc/">0.5.3-1</a></td><td>Client for cisco vpn concentrator.</td><td>2016-04-13</td></tr>
+   <tr class="odd"><td><a href="https://github.com/shinh/w3m">w3m</a></td><td><a href="./w3m/">git-1</a></td><td>Text-based web browser. (git checkout)</td><td>2016-04-19</td></tr>
+   <tr class="even"><td><a href="http://git.z3bra.org/wendy/log.html">wendy</a></td><td><a href="./wendy/">git-1</a></td><td>Event watcher. (git checkout)</td><td>2016-04-13</td></tr>
+   <tr class="odd"><td><a href="https://wiki.winehq.org/Winetricks">winetricks</a></td><td><a href="./winetricks/">git-1</a></td><td>Helper script to install windows dependacies for wine. (git checkout)</td><td>2016-04-13</td></tr>
+   <tr class="even"><td><a href="https://github.com/wmutils/core">wmutils</a></td><td><a href="./wmutils/">git-1</a></td><td>Wmutils core is a set of tools for X windows manipulation. (git checkout)</td><td>2016-04-13</td></tr>
+   <tr class="odd"><td><a href="https://github.com/wildefyr/opt">wmutils-opt</a></td><td><a href="./wmutils-opt/">git-1</a></td><td>Optional extensions to wmutils. (git checkout)</td><td>2016-04-13</td></tr>
+   <tr class="even"><td><a href="https://github.com/alols/xcape">xcape</a></td><td><a href="./xcape/">git-1</a></td><td>Modify a key's function on press and hold. (git checkout)</td><td>2016-04-19</td></tr>
+   <tr class="odd"><td><a href="https://github.com/jordansissel/xdotool">xdotool</a></td><td><a href="./xdotool/">git-1</a></td><td>Fake keyboard/mouse input. (git checkout)</td><td>2016-04-15</td></tr>
+   <tr class="even"><td><a href="https://github.com/xero/figlet-fonts">xero-figlet-fonts</a></td><td><a href="./xero-figlet-fonts/">git-1</a></td><td>Xero's figlet collection. (git checkout)</td><td>2016-04-13</td></tr>
+   <tr class="odd"><td><a href="http://git.2f30.org/xscreenshot/log.html">xscreenshot</a></td><td><a href="./xscreenshot/">git-1</a></td><td>Screen capture tool. (git checkout)</td><td>2016-04-13</td></tr>
+   <tr class="even"><td><a href="https://github.com/neeasade/xst">xst</a></td><td><a href="./xst/">git-1</a></td><td>Simple terminal fork.</td><td>2016-04-25</td></tr>
+   <tr class="odd"><td><a href="https://github.com/Wildefyr/xxd">xxd</a></td><td><a href="./xxd/">git-1</a></td><td>Hexdump program written by Bram. (git checkout)</td><td>2016-04-13</td></tr>
+   <tr class="even"><td><a href="https://github.com/tokland/youtube-upload">youtube-upload</a></td><td><a href="./youtube-upload/">git-1</a></td><td>Upload to youtube from the commandline. (git checkout)</td><td>2016-04-13</td></tr>
   </table>
-  <p><b>85 ports</b></p>
+  <p><b>84 ports</b></p>
 <li><a href="/ports/wildefyr.git">Git Sync</a></li>
 <li><a href="/ports/wildefyr.httpup">Httpup Sync</a></li>
