--- a/html/head.html
+++ b/html/head.html
@@ -3,7 +3,7 @@
 
   <head>
     <title>wildefyr.net</title>
-    <link rel="icon" type="image/png" href="/media/favicon.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/resources/favicon.png" sizes="32x32">
     <link rel="stylesheet" title="mainStyle" href = "/css/wildefyr.css">
     <meta charset=UTF-8>
     <meta name="google-site-verification" content="6zPpqLkqZb_1t_AhIKVfvTil-oum1clGuVKtJiRASXI" />
