--- a/ports/index.html
+++ b/ports/index.html
@@ -64,29 +64,30 @@
    <tr class="even"><td><a href="http://www.teamspeak.com/">teamspeak</a></td><td><a href="./teamspeak/">3.0.19-1</a></td><td>Teamspeak VoIP client.</td><td>2016-04-18</td></tr>
    <tr class="odd"><td><a href="https://github.com/vysheng/tg">telegram-cli</a></td><td><a href="./telegram-cli/">git-1</a></td><td>Read-line interface for telegram. (git checkout)</td><td>2016-04-25</td></tr>
    <tr class="even"><td><a href="http://matthew.malensek.net/projects/terminibbles/">terminibbles</a></td><td><a href="./terminibbles/">git-1</a></td><td>A terminal-based nibbles (snake) game. (git checkout)</td><td>2016-04-25</td></tr>
-   <tr class="odd"><td><a href="https://github.com/fagga/transmission-remote-cli">transmission-remote-cli</a></td><td><a href="./transmission-remote-cli/">git-1</a></td><td>Ncurses interface for transmission. (git checkout)</td><td>2016-04-25</td></tr>
-   <tr class="even"><td><a href="http://forchheimer.se/transset-df/">transset-df</a></td><td><a href="./transset-df/">6-1</a></td><td>Independent xorg server transparency setter.</td><td>2016-04-13</td></tr>
-   <tr class="odd"><td><a href="https://github.com/lindes/ttyload">ttyload</a></td><td><a href="./ttyload/">git-1</a></td><td>Graphical tracking of Unix load averages. (git checkout)</td><td>2016-04-13</td></tr>
-   <tr class="even"><td><a href="https://github.com/baskerville/txtw">txtw</a></td><td><a href="./txtw/">git-1</a></td><td>Return the pixel width of the given strings for the given font</td><td>2016-04-13</td></tr>
-   <tr class="odd"><td><a href="http://sourceforge.net/projects/linux-udf">udftools</a></td><td><a href="./udftools/">1.0.0b3-1</a></td><td>Mount UDF images.</td><td>2016-04-13</td></tr>
-   <tr class="even"><td><a href="https://github.com/mauke/unibilium/">unibilium</a></td><td><a href="./unibilium/">1.2.0-1</a></td><td>A terminfo parsing library.</td><td>2016-04-18</td></tr>
-   <tr class="odd"><td><a href="http://urwid.org/">urwid3</a></td><td><a href="./urwid3/">1.3.1-1</a></td><td>A console user interface library for python.</td><td>2016-04-13</td></tr>
-   <tr class="even"><td><a href="https://github.com/muennich/urxvt-perls">urxvt-perls</a></td><td><a href="./urxvt-perls/">git-1</a></td><td>Perl extensions for the urxvt-unicode terminal emulator. (git checkout)</td><td>2016-04-13</td></tr>
-   <tr class="odd"><td><a href="http://www.victornils.net/tetris/">vitetris</a></td><td><a href="./vitetris/">0.57-1</a></td><td>Terminal-based tetris clone.</td><td>2016-04-19</td></tr>
-   <tr class="even"><td><a href="https://www.unix-ag.uni-kl.de/~massar/vpnc/">vpnc</a></td><td><a href="./vpnc/">0.5.3-1</a></td><td>Client for cisco vpn concentrator.</td><td>2016-04-13</td></tr>
-   <tr class="odd"><td><a href="https://github.com/shinh/w3m">w3m</a></td><td><a href="./w3m/">git-1</a></td><td>Text-based web browser. (git checkout)</td><td>2016-04-19</td></tr>
-   <tr class="even"><td><a href="http://git.z3bra.org/wendy/log.html">wendy</a></td><td><a href="./wendy/">git-1</a></td><td>Event watcher. (git checkout)</td><td>2016-04-13</td></tr>
-   <tr class="odd"><td><a href="https://wiki.winehq.org/Winetricks">winetricks</a></td><td><a href="./winetricks/">git-1</a></td><td>Helper script to install windows dependacies for wine. (git checkout)</td><td>2016-04-13</td></tr>
-   <tr class="even"><td><a href="https://github.com/wmutils/core">wmutils</a></td><td><a href="./wmutils/">git-1</a></td><td>Wmutils core is a set of tools for X windows manipulation. (git checkout)</td><td>2016-04-13</td></tr>
-   <tr class="odd"><td><a href="https://github.com/wildefyr/opt">wmutils-opt</a></td><td><a href="./wmutils-opt/">git-1</a></td><td>Optional extensions to wmutils. (git checkout)</td><td>2016-04-13</td></tr>
-   <tr class="even"><td><a href="https://github.com/alols/xcape">xcape</a></td><td><a href="./xcape/">git-1</a></td><td>Modify a key's function on press and hold. (git checkout)</td><td>2016-04-19</td></tr>
-   <tr class="odd"><td><a href="https://github.com/jordansissel/xdotool">xdotool</a></td><td><a href="./xdotool/">git-1</a></td><td>Fake keyboard/mouse input. (git checkout)</td><td>2016-04-15</td></tr>
-   <tr class="even"><td><a href="https://github.com/xero/figlet-fonts">xero-figlet-fonts</a></td><td><a href="./xero-figlet-fonts/">git-1</a></td><td>Xero's figlet collection. (git checkout)</td><td>2016-04-13</td></tr>
-   <tr class="odd"><td><a href="http://git.2f30.org/xscreenshot/log.html">xscreenshot</a></td><td><a href="./xscreenshot/">git-1</a></td><td>Screen capture tool. (git checkout)</td><td>2016-04-13</td></tr>
-   <tr class="even"><td><a href="https://github.com/neeasade/xst">xst</a></td><td><a href="./xst/">git-1</a></td><td>Simple terminal fork.</td><td>2016-04-25</td></tr>
-   <tr class="odd"><td><a href="https://github.com/Wildefyr/xxd">xxd</a></td><td><a href="./xxd/">git-1</a></td><td>Hexdump program written by Bram. (git checkout)</td><td>2016-04-13</td></tr>
-   <tr class="even"><td><a href="https://github.com/tokland/youtube-upload">youtube-upload</a></td><td><a href="./youtube-upload/">git-1</a></td><td>Upload to youtube from the commandline. (git checkout)</td><td>2016-04-13</td></tr>
+   <tr class="odd"><td><a href="http://libcaca.zoy.org/wiki/toilet">toilet</a></td><td><a href="./toilet/">0.3-1</a></td><td>Free replacement for figlet.</td><td>2016-04-28</td></tr>
+   <tr class="even"><td><a href="https://github.com/fagga/transmission-remote-cli">transmission-remote-cli</a></td><td><a href="./transmission-remote-cli/">git-1</a></td><td>Ncurses interface for transmission. (git checkout)</td><td>2016-04-25</td></tr>
+   <tr class="odd"><td><a href="http://forchheimer.se/transset-df/">transset-df</a></td><td><a href="./transset-df/">6-1</a></td><td>Independent xorg server transparency setter.</td><td>2016-04-13</td></tr>
+   <tr class="even"><td><a href="https://github.com/lindes/ttyload">ttyload</a></td><td><a href="./ttyload/">git-1</a></td><td>Graphical tracking of Unix load averages. (git checkout)</td><td>2016-04-13</td></tr>
+   <tr class="odd"><td><a href="https://github.com/baskerville/txtw">txtw</a></td><td><a href="./txtw/">git-1</a></td><td>Return the pixel width of the given strings for the given font</td><td>2016-04-13</td></tr>
+   <tr class="even"><td><a href="http://sourceforge.net/projects/linux-udf">udftools</a></td><td><a href="./udftools/">1.0.0b3-1</a></td><td>Mount UDF images.</td><td>2016-04-13</td></tr>
+   <tr class="odd"><td><a href="https://github.com/mauke/unibilium/">unibilium</a></td><td><a href="./unibilium/">1.2.0-1</a></td><td>A terminfo parsing library.</td><td>2016-04-18</td></tr>
+   <tr class="even"><td><a href="http://urwid.org/">urwid3</a></td><td><a href="./urwid3/">1.3.1-1</a></td><td>A console user interface library for python.</td><td>2016-04-13</td></tr>
+   <tr class="odd"><td><a href="https://github.com/muennich/urxvt-perls">urxvt-perls</a></td><td><a href="./urxvt-perls/">git-1</a></td><td>Perl extensions for the urxvt-unicode terminal emulator. (git checkout)</td><td>2016-04-13</td></tr>
+   <tr class="even"><td><a href="http://www.victornils.net/tetris/">vitetris</a></td><td><a href="./vitetris/">0.57-1</a></td><td>Terminal-based tetris clone.</td><td>2016-04-19</td></tr>
+   <tr class="odd"><td><a href="https://www.unix-ag.uni-kl.de/~massar/vpnc/">vpnc</a></td><td><a href="./vpnc/">0.5.3-1</a></td><td>Client for cisco vpn concentrator.</td><td>2016-04-13</td></tr>
+   <tr class="even"><td><a href="https://github.com/shinh/w3m">w3m</a></td><td><a href="./w3m/">git-1</a></td><td>Text-based web browser. (git checkout)</td><td>2016-04-19</td></tr>
+   <tr class="odd"><td><a href="http://git.z3bra.org/wendy/log.html">wendy</a></td><td><a href="./wendy/">git-1</a></td><td>Event watcher. (git checkout)</td><td>2016-04-13</td></tr>
+   <tr class="even"><td><a href="https://wiki.winehq.org/Winetricks">winetricks</a></td><td><a href="./winetricks/">git-1</a></td><td>Helper script to install windows dependacies for wine. (git checkout)</td><td>2016-04-13</td></tr>
+   <tr class="odd"><td><a href="https://github.com/wmutils/core">wmutils</a></td><td><a href="./wmutils/">git-1</a></td><td>Wmutils core is a set of tools for X windows manipulation. (git checkout)</td><td>2016-04-13</td></tr>
+   <tr class="even"><td><a href="https://github.com/wildefyr/opt">wmutils-opt</a></td><td><a href="./wmutils-opt/">git-1</a></td><td>Optional extensions to wmutils. (git checkout)</td><td>2016-04-13</td></tr>
+   <tr class="odd"><td><a href="https://github.com/alols/xcape">xcape</a></td><td><a href="./xcape/">git-1</a></td><td>Modify a key's function on press and hold. (git checkout)</td><td>2016-04-19</td></tr>
+   <tr class="even"><td><a href="https://github.com/jordansissel/xdotool">xdotool</a></td><td><a href="./xdotool/">git-1</a></td><td>Fake keyboard/mouse input. (git checkout)</td><td>2016-04-15</td></tr>
+   <tr class="odd"><td><a href="https://github.com/xero/figlet-fonts">xero-figlet-fonts</a></td><td><a href="./xero-figlet-fonts/">git-1</a></td><td>Xero's figlet collection. (git checkout)</td><td>2016-04-13</td></tr>
+   <tr class="even"><td><a href="http://git.2f30.org/xscreenshot/log.html">xscreenshot</a></td><td><a href="./xscreenshot/">git-1</a></td><td>Screen capture tool. (git checkout)</td><td>2016-04-13</td></tr>
+   <tr class="odd"><td><a href="https://github.com/neeasade/xst">xst</a></td><td><a href="./xst/">git-1</a></td><td>Simple terminal fork.</td><td>2016-04-25</td></tr>
+   <tr class="even"><td><a href="https://github.com/Wildefyr/xxd">xxd</a></td><td><a href="./xxd/">git-1</a></td><td>Hexdump program written by Bram. (git checkout)</td><td>2016-04-13</td></tr>
+   <tr class="odd"><td><a href="https://github.com/tokland/youtube-upload">youtube-upload</a></td><td><a href="./youtube-upload/">git-1</a></td><td>Upload to youtube from the commandline. (git checkout)</td><td>2016-04-13</td></tr>
   </table>
-  <p><b>86 ports</b></p>
+  <p><b>87 ports</b></p>
 <li><a href="/ports/wildefyr.git">Git Sync</a></li>
 <li><a href="/ports/wildefyr.httpup">Httpup Sync</a></li>
