--- a/html/404.html
+++ b/html/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-    <title>wildefyr.net</title>
+    <title>fyrious.ninja</title>
     <link rel="icon" type="image/png" href="/media/favicon.png" sizes="32x32">
     <link rel="stylesheet" title="mainStyle" href = "/css/wildefyr.css">
     <meta charset=UTF-8>
@@ -35,7 +35,7 @@
           <div id="textWrap">
             <p>
             If you believe you are receiving this page in error, please contact
-            me via email at <a href="mailto:me@wildefyr.net">me@wildefyr.net</a>
+            me via email at <a href="mailto:me@fyrious.ninja">me@fyrious.ninja</a>
             </p>
           </div>
         </div>
