--- a/html/head.html
+++ b/html/head.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-    <title>wildefyr.net</title>
+    <title>fyrious.ninja</title>
     <link rel="icon" type="image/png" href="/resources/favicon.png" sizes="32x32">
     <link rel="stylesheet" title="mainStyle" href = "/css/wildefyr.css">
     <meta charset=UTF-8>
